# django-rest-aggregation

./: .gitignore  LICENSE  README.md  README.rst  pyproject.toml  requirements-dev.txt  requirements.txt  ruff.toml  runtests.py  setup.cfg
.github/workflows/: publish.yml
drf_aggregation/: helpers.py  utils.py
src/django_rest_aggregation/: aggregator.py  enums.py  filter.py  helpers.py  mixins.py  routers.py  serializers.py
tests/: filters.py  fixture.py  models.py  serializer.py  serializers.py  settings.py  test_aggregation.py  test_data.py  urls.py  views.py
