[metadata]
name = django-rest-aggregation
author = Simon Legtenborg
author_email = simon.legtenborg@singular-it.de
summary = DRF ViewSet for getting aggregations
license = MIT
description_file = README.txt
home_page = https://github.com/slegt/
requires_python = >= 3.6
classifier =
    Development Status :: 4 - Beta
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3


[files]
packages = drf_aggregation


[options]
python_requires = >=3.6
install_requires =
    djangorestframework
